made the top bar flexible

--- a/src/templates/chatroom_head.html
+++ b/src/templates/chatroom_head.html
@@ -23,7 +23,7 @@
 <div class="top-toolbar">
         <div class="container-fluid">
             <div class="rowx">
-                <div class="room-description arc arc--r">
+                <div class="room-description left-flex">
                     <div class="container-fluid">
                         <div class="row channel-name">
                             #{{ o.name }}
@@ -38,13 +38,13 @@
                                     <i class="far fa-user"></i>
                                 </li>
                                 <li class="favorite-channel">
-                                    <span class="channel-desc ">{{{o.room_description}}}</span>
+                                    <span class="channel-desc" title="{{{o.room_description}}}">{{{o.room_description}}}</span>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     </div>
-                <div class="room-controls">
+                <div class="room-controls right-flex">
                     <ul class="top-toolbar-menu">
                     </ul>
                     <div class="chatbox-buttons-custom">
