--- a/src/templates/chatroom_invite.html
+++ b/src/templates/chatroom_invite.html
@@ -1,4 +1,6 @@
 <div class="suggestion-box room-invite">
+        <i class="fa fa-user"></i>
+    <span>{{{o.__('invite others to this channel')}}}</span>
     <form>
         {[ if (o.error_message) { ]} <span class="error">{{{o.error_message}}}</span> {[ } ]}
         <div class="form-group">
