testing file attach

--- a/src/templates/chatbox_message_form.html
+++ b/src/templates/chatbox_message_form.html
@@ -3,7 +3,7 @@
 <form class="sendXMPPMessage">
     <div class="row">
         <div class="col-sm-auto" >
-            <a class="add-message m-auto">
+            <a href="#" class="add-message m-auto">
                 <i class="fa fa-plus fa-2x"></i>
             </a>
         </div>
