--- a/src/templates/chatroom_head.html
+++ b/src/templates/chatroom_head.html
@@ -48,7 +48,7 @@
                     <ul class="top-toolbar-menu">
                     </ul>
                     <div class="chatbox-buttons-custom">
-                        <a class="chatbox-btn close-chatbox-button fa fa-sign-out-alt" title="{{{o.info_close}}}"></a>
+                        <a class="chatbox-btn close-chatbox-button fa fa-times" title="{{{o.info_close}}}"></a>
                         <!-- {[ if (o.affiliation == 'owner') { ]}
                         <a class="chatbox-btn configure-chatroom-button fa fa-wrench" title="{{{o.info_configure}}} "></a>
                         {[ } ]}
