--- a/css/converse.css
+++ b/css/converse.css
@@ -10616,8 +10616,8 @@ body.converse-fullscreen {
   #conversejs.converse-fullscreen .chatbox .box-flyout {
     background-color: var(--chat-head-color);
     box-shadow: none;
-    height: var(--fullpage-chat-height);
-    min-height: calc(var(--fullpage-chat-height) / 2);
+    height: calc(var(--vh, 1vh) * 100);
+    min-height: calc(var(--vh, 1vh) * 50);
     width: var(--fullpage-chat-width);
     overflow: hidden; }
   #conversejs.converse-fullscreen .chatbox .chat-body {
