--- a/css/converse.css
+++ b/css/converse.css
@@ -9419,7 +9419,7 @@ readers do not read off random characters that represent icons */
   --avatar-border: 1px solid lightgrey;
   --avatar-background-color: white;
   --fullpage-chat-head-height: 62px;
-  --fullpage-chat-height: 100vh;
+  --fullpage-chat-height: calc(var(--vh, 1vh) * 100);
   --fullpage-chat-width: 100%;
   --fullpage-emoji-picker-height: 200px;
   --fullpage-max-chat-textarea-height: 15em;
