--- a/src/templates/chatroom_invite.html
+++ b/src/templates/chatroom_invite.html
@@ -7,6 +7,7 @@
             <input class="form-control invited-contact suggestion-box__input"
                    placeholder="{{{o.label_invitation}}}"
                    type="text"/>
+            <!-- <button type="submit" class="room-invite-submit">{{{o.__('invite')}}}</button>        -->
             <span class="suggestion-box__additions visually-hidden" role="status" aria-live="assertive" aria-relevant="additions"></span>
         </div>
     </form>
