--- a/src/templates/add_chatroom_modal.html
+++ b/src/templates/add_chatroom_modal.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="form-group channel-about">
                             <label for="purpose">{{{o.__('Purpose')}}}&nbsp;({{{o.__('Optional')}}})</label>
-                            <input type="text" required="required" name="purpose" class="form-control" />
+                            <input type="text" name="purpose" class="form-control" />
                             <span>{{{o.__("What's the channel about?")}}}</span>
                     </div>
                     <div class="form-group channel-invite">
