--- a/src/templates/chatbox_head.html
+++ b/src/templates/chatbox_head.html
@@ -45,8 +45,8 @@
                         </div>
                     </div>
                     </div> -->
-                <div class="col-sm-6"></div>
-                <div class="col-sm-6 room-controls">
+                <div class="col"></div>
+                <div class="col-auto room-controls">
                     <ul class="top-toolbar-menu">
                     </ul>
                     <div class="chatbox-buttons">
