--- a/src/templates/add_contact_modal.html
+++ b/src/templates/add_contact_modal.html
@@ -24,7 +24,7 @@
                         <label class="clearfix" for="name">{{{o.label_nickname}}}:</label>
                         <div class="suggestion-box suggestion-box__name">
                             <ul class="suggestion-box__results suggestion-box__results--above" hidden=""></ul>
-                            <input type="text" name="name" value="{{{o.nickname}}}"
+                            <input type="text" autocomplete="false" name="name" value="{{{o.nickname}}}"
                                    class="form-control suggestion-box__input"
                                    placeholder="{{{o.nickname_placeholder}}}"/>
                             <span class="suggestion-box__additions visually-hidden" role="status" aria-live="assertive" aria-relevant="additions"></span>
