--- a/src/templates/message.html
+++ b/src/templates/message.html
@@ -15,7 +15,8 @@
         </span>
         {[ if (!o.is_me_message) { ]}<div class="chat-msg__body">{[ } ]}
             {[ if (o.received) { ]} <span class="fa fa-check chat-msg__receipt"></span> {[ } ]}
-            {[ if (o.edited) { ]} <i title="{{{o.__('This message has been edited')}}}" class="fa fa-edit chat-msg__edit-modal"></i> {[ } ]}
+            {[ if (o.edited && !o.deleted) { ]} <i title="{{{o.__('This message has been edited')}}}" class="fa fa-edit chat-msg__edit-modal"></i> {[ } ]}
+            {[ if (o.deleted) { ]} <i title="{{{o.__('This message has been edited')}}}" class="far fa-trash-alt"></i> {[ } ]}
             {[ if (!o.is_me_message) { ]}<div class="chat-msg__message">{[ } ]}
                 {[ if (o.is_spoiler) { ]}
                     <div class="chat-msg__spoiler-hint">
@@ -31,10 +32,17 @@
                     {[ if (o.is_spoiler) { ]} spoiler collapsed{[ } ]}"><!-- message gets added here via renderMessage --></div>
                 <div class="chat-msg__media"></div>
             {[ if (!o.is_me_message) { ]}</div>{[ } ]}
-            {[ if (o.type !== 'headline' && !o.is_me_message && o.sender === 'me') { ]}
-            <div class="chat-msg__actions">
+            {[ if (o.type !== 'headline' && !o.is_me_message && o.sender === 'me' && !o.deleted) { ]}
+            <!-- <div class="chat-msg__actions">
+                
                 <button class="chat-msg__action chat-msg__action-edit fa fa-pencil-alt" title="{{{o.__('Edit this message')}}}"></button>
-            </div>
+                <button class="chat-msg__action chat-msg__action-delete fa fa-flag" title="{{{o.__('Delete this message')}}}"></button>
+            </div> -->
+            <button class="toggle-chat-msg-actions">...</button>
+            <ul class="chat-msg-actions hidden">
+                    <li class="chat-msg__action chat-msg__action-edit fa fa-pencil-alt" title="{{{o.__('Edit this message')}}}">{{{o.__('Edit message')}}}</li>
+                    <li class="chat-msg__action chat-msg__action-delete fa fa-flag" title="{{{o.__('Delete this message')}}}">{{{o.__('Delete message')}}}</li>
+            </ul>
             {[ } ]}
 
         {[ if (!o.is_me_message) { ]}</div>{[ } ]}
