--- a/src/templates/message.html
+++ b/src/templates/message.html
@@ -38,11 +38,11 @@
                 <button class="chat-msg__action chat-msg__action-edit fa fa-pencil-alt" title="{{{o.__('Edit this message')}}}"></button>
                 <button class="chat-msg__action chat-msg__action-delete fa fa-flag" title="{{{o.__('Delete this message')}}}"></button>
             </div> -->
-            <button class="toggle-chat-msg-actions">...</button>
             <ul class="chat-msg-actions hidden">
                     <li class="chat-msg__action chat-msg__action-edit fa fa-pencil-alt" title="{{{o.__('Edit this message')}}}">{{{o.__('Edit message')}}}</li>
                     <li class="chat-msg__action chat-msg__action-delete fa fa-flag" title="{{{o.__('Delete this message')}}}">{{{o.__('Delete message')}}}</li>
             </ul>
+            <button class="toggle-chat-msg-actions"><i class="fas fa-ellipsis-h"></i></button>
             {[ } ]}
 
         {[ if (!o.is_me_message) { ]}</div>{[ } ]}
