--- a/src/templates/message.html
+++ b/src/templates/message.html
@@ -40,10 +40,10 @@
             </div> -->
             <div class="dropdown-actions">
             <ul class="chat-msg-actions hidden">
-                <li class="chat-msg__action chat-msg__action-edit fa fa-pencil-alt" title="{{{o.__('Edit this message')}}}">{{{o.__('Edit message')}}}</li>
-                <li class="chat-msg__action chat-msg__action-delete fa fa-flag" title="{{{o.__('Delete this message')}}}">{{{o.__('Delete message')}}}</li>
+                <li class="chat-msg__action chat-msg__action-edit fa fa-pencil-alt" >{{{o.__('Edit message')}}}</li>
+                <li class="chat-msg__action chat-msg__action-delete fa fa-flag" >{{{o.__('Delete message')}}}</li>
             </ul>
-            <button class="toggle-chat-msg-actions"><i class="fas fa-ellipsis-h"></i></button>
+            <button class="toggle-chat-msg-actions">...</i></button>
             </div>
             {[ } ]}
 
