--- a/src/templates/chat_status_modal.html
+++ b/src/templates/chat_status_modal.html
@@ -36,13 +36,13 @@
                                 <span class="fa fa-circle chat-status chat-status--xa"></span>{{{o.label_xa}}}</label>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <div class="btn-group w-100">
                             <input name="status_message" type="text" class="form-control" 
                                 value="{{{o.status_message}}}" placeholder="{{{o.placeholder_status_message}}}"/>
                             <span class="clear-input fa fa-times {[ if (!o.status_message) { ]} hidden {[ } ]}"></span>
                         </div>
-                    </div>
+                    </div> -->
                     <button type="submit" class="btn btn-primary">{{{o.label_save}}}</button>
                 </form>
             </div>
