--- a/src/templates/message.html
+++ b/src/templates/message.html
@@ -40,8 +40,9 @@
             </div> -->
             <div class="dropdown-actions">
             <ul class="chat-msg-actions hidden">
-                <li class="chat-msg__action chat-msg__action-edit fa fa-pencil-alt" >{{{o.__('Edit message')}}}</li>
-                <li class="chat-msg__action chat-msg__action-delete fa fa-flag" >{{{o.__('Delete message')}}}</li>
+                <li class="chat-msg__action chat-msg__action-edit"><i class="fa fa-pencil-alt"></i>{{{o.__('Edit message')}}}</li>
+                <li class="chat-msg__action chat-msg__action-delete"><i class="fa fa-flag"></i>{{{o.__('Delete message')}}}</li>
+                <li class="chat-msg__action cancel-chat-msg-actions"><i class="fa fa-times"></i>{{{o.__('Cancel')}}}</li>
                
             </ul>
             <button class="toggle-chat-msg-actions">...</i></button>
