--- a/sass/_chatrooms.scss
+++ b/sass/_chatrooms.scss
@@ -509,7 +509,7 @@
             .occupants {
                 .occupants-header {
                     .hide-occupants {
-                        display: none;
+                        display: block;
                     }
                 }
             }
