--- a/src/templates/profile_view.html
+++ b/src/templates/profile_view.html
@@ -25,6 +25,7 @@
             <!-- <a href="javascript:void(0);" class="dropdown-item">Help &amp; feedback</a> -->
             <a class="controlbox-heading__btn change-status" title="{{{o.title_change_status}}}" data-toggle="modal" data-target="#changeStatusModal">Change Status</a>
             <a href="javascript:void(0);" class="dropdown-item logout align-self-center">Log out</a>
+            <a href="#" data-toggle="dropdown" class="dropdown-item cancel align-self-center"aria-expanded="false">Cancel</a>
         </div>
         <div class="user-role font-size-xs opacity-75">
                 {{{o.role}}}
