--- a/src/templates/profile_view.html
+++ b/src/templates/profile_view.html
@@ -17,16 +17,17 @@
                 <!-- <a class="controlbox-heading__btn change-status fa fa-pencil-alt" title="{{{o.title_change_status}}}" data-toggle="modal" data-target="#changeStatusModal"></a> -->
             </div>
     </a>
+
     <div class="media-body dropdown">
         <a href="#" data-toggle="dropdown" class="profile-menu media-title dropdown-toggle font-weight-semibold" aria-expanded="false">{{{o.fullname}}}</a>
-        <div class="dropdown-menu animate slideIn">
-            <a href="javascript:void(0);" class="dropdown-item show-profile">Profile &amp; Account</a>
+        <ul class="dropdown-menu animate slideIn">
+            <li><a href="#" class="dropdown-item show-profile">Profile &amp; Account</a></li>
             <!-- <a href="javascript:void(0);" class="dropdown-item">Preferences</a> -->
             <!-- <a href="javascript:void(0);" class="dropdown-item">Help &amp; feedback</a> -->
-            <a class="controlbox-heading__btn change-status" title="{{{o.title_change_status}}}" data-toggle="modal" data-target="#changeStatusModal">Change Status</a>
-            <a href="javascript:void(0);" class="dropdown-item logout align-self-center">Log out</a>
-            <a href="#" data-toggle="dropdown" class="dropdown-item cancel align-self-center"aria-expanded="false">Cancel</a>
-        </div>
+            <li><a href="#" class="dropdown-item controlbox-heading__btn change-status" title="{{{o.title_change_status}}}" data-toggle="modal" data-target="#changeStatusModal">Change Status</a></li>
+            <li><a href="#" class="dropdown-item logout align-self-center">Log out</a></li>
+            <li><a href="#" class="dropdown-item cancel align-self-center">Cancel</a></li>
+        </ul>
         <div class="user-role font-size-xs opacity-75">
                 {{{o.role}}}
         </div>
