side bar change

--- a/src/templates/chatroom_sidebar.html
+++ b/src/templates/chatroom_sidebar.html
@@ -2,14 +2,18 @@
 <div class="occupants-header">
     <i class="hide-occupants fa fa-times"></i>
     <p class="room-info"><strong>{{{o.__('ABOUT#')}}}</strong> {{{o.name}}}</p>
-    <p class="occupants-heading">{{{o.label_occupants}}}</p>
+    <!-- <p class="occupants-heading">{{{o.label_occupants}}}</p> -->
 </div>
 <div>
-<i class="fa fa-users"></i>
-<div>
-    <span class="numberofonline">0</span>/<span class="numberofoccupants">0</span>
+    <i class="fa fa-users"></i>
+    <div>
+        <span class="numberofonline">0</span>/<span class="numberofoccupants">0</span>
+    </div>
+    <span>{{{o.__('Members')}}}</span>
+    <!-- <p class="room-info"><strong>{{{o.__('Online users')}}}</strong></p> -->
 </div>
-<p class="room-info"><strong>{{{o.__('Online users')}}}</strong>: {{{o.num_occupants}}}</p>
+<div>
+    <p class="occupants-heading"></p>
 </div>
 <ul class="occupant-list"></ul>
 <div class="chatroom-features"></div>
