--- a/src/templates/rooms_list_item.html
+++ b/src/templates/rooms_list_item.html
@@ -27,5 +27,11 @@
    data-room-jid="{{{o.jid}}}"
    data-room-name="{{{o.name || o.jid}}}"
    title="{{{o.info_leave_room}}}" href="#"></a>
-
+   
+{[ if (o.affiliation==='owner') { ]}
+<a class="list-item-action far fa-trash-alt delete-room"
+   data-room-jid="{{{o.jid}}}"
+   data-room-name="{{{o.name || o.jid}}}"
+   title="{{{o.delete_room}}}" href="#"></a>   
+{[ } ]}
 </div>
