--- a/src/templates/chatroom_configuration_modal.html
+++ b/src/templates/chatroom_configuration_modal.html
@@ -42,7 +42,7 @@
                   </div>
                   <div class="form-group channel-about">
                           <label for="purpose">{{{o.__('Purpose')}}}&nbsp;({{{o.__('Optional')}}})</label>
-                          <input type="text" required="required" name="purpose" class="form-control" value="{{{o.roomdesc}}}" />
+                          <input type="text" name="purpose" class="form-control" value="{{{o.roomdesc}}}" />
                           <span>{{{o.__("What's the channel about?")}}}</span>
                   </div>
                 
