--- a/src/templates/rooms_list_item.html
+++ b/src/templates/rooms_list_item.html
@@ -20,8 +20,8 @@
    href="#"></a>
 {[ } ]}
 
-<a class="list-item-action room-info fa fa-info-circle" data-room-jid="{{{o.jid}}}"
-   title="{{{o.info_title}}}" href="#"></a>
+<!-- <a class="list-item-action room-info fa fa-info-circle" data-room-jid="{{{o.jid}}}"
+   title="{{{o.info_title}}}" href="#"></a> -->
 
 <a class="list-item-action fa fa-sign-out-alt close-room"
    data-room-jid="{{{o.jid}}}"
