--- a/src/templates/message.html
+++ b/src/templates/message.html
@@ -15,8 +15,8 @@
         </span>
         {[ if (!o.is_me_message) { ]}<div class="chat-msg__body">{[ } ]}
             {[ if (o.received && !o.is_me_message) { ]} <span class="fa fa-check chat-msg__receipt"></span> {[ } ]}
-            {[ if (o.edited && !o.deleted) { ]} <i title="{{{o.__('This message has been edited')}}}" class="fa fa-edit chat-msg__edit-modal"></i> {[ } ]}
-            {[ if (o.deleted) { ]} <i title="{{{o.__('This message has been edited')}}}" class="far fa-trash-alt"></i> {[ } ]}
+            {[ if (o.edited && !o.deleted && !o.isDeleted) { ]} <i title="{{{o.__('This message has been edited')}}}" class="fa fa-edit chat-msg__edit-modal"></i> {[ } ]}
+            {[ if (o.deleted || o.isDeleted) { ]} <i title="{{{o.__('This message has been deleted')}}}" class="far fa-trash-alt"></i> {[ } ]}
             {[ if (!o.is_me_message) { ]}<div class="chat-msg__message">{[ } ]}
                 {[ if (o.is_spoiler) { ]}
                     <div class="chat-msg__spoiler-hint">
@@ -28,13 +28,13 @@
                     <div class="chat-msg__subject">{{{ o.subject }}}</div>
                 {[ } ]}
                 <div class="chat-msg__text
-                    {[ if (o.is_single_emoji &&  !o.deleted ) { ]} chat-msg__text--larger{[ } ]}
-                    {[ if (o.is_spoiler &&  !o.deleted) { ]} spoiler collapsed{[ } ]}"><!-- message gets added here via renderMessage --></div>
-                    <!-- {[ if (!o.deleted) { ]} -->
+                    {[ if (o.is_single_emoji &&  !o.deleted && !o.isDeleted ) { ]} chat-msg__text--larger{[ } ]}
+                    {[ if (o.is_spoiler &&  !o.deleted && !o.isDeleted) { ]} spoiler collapsed{[ } ]}"><!-- message gets added here via renderMessage --></div>
+                    {[ if (!o.deleted || !o.isDeleted) { ]}
                     <div class="chat-msg__media"></div>
-                    <!-- {[ } ]}    -->
+                    {[ } ]}   
             {[ if (!o.is_me_message) { ]}</div>{[ } ]}
-            {[ if (o.type !== 'headline' && !o.is_me_message && o.sender === 'me' && !o.deleted) { ]}
+            {[ if (o.type !== 'headline' && !o.is_me_message && o.sender === 'me' && !o.deleted && !o.isDeleted)  { ]}
             <!-- <div class="chat-msg__actions">
                 
                 <button class="chat-msg__action chat-msg__action-edit fa fa-pencil-alt" title="{{{o.__('Edit this message')}}}"></button>
