--- a/src/templates/message.html
+++ b/src/templates/message.html
@@ -42,7 +42,10 @@
             </div> -->
             <div class="dropdown-actions">
             <ul class="chat-msg-actions hidden">
+                    
+                    {[ if (!o.url) { ]}
                 <li class="chat-msg__action chat-msg__action-edit"><i class="fa fa-pencil-alt"></i>{{{o.__('Edit message')}}}</li>
+                {[ } ]}
                 <li class="chat-msg__action chat-msg__action-delete"><i class="fa fa-flag"></i>{{{o.__('Delete message')}}}</li>
                 <li class="chat-msg__action cancel-chat-msg-actions"><i class="fa fa-times"></i>{{{o.__('Cancel')}}}</li>
                
