--- a/src/templates/chatroom_head.html
+++ b/src/templates/chatroom_head.html
@@ -21,6 +21,7 @@
     {[ } ]}
     <a class="chatbox-btn show-room-details-modal fa fa-info-circle" title="{{{o.info_details}}}"></a>
 </div>  -->
+<!-- <div class="chatbox-navback"><i class="fa fa-arrow-left"></i></div> -->
 <div class="chatbox-title">
 <div class="top-toolbar">
         <div class="container-fluid">
