--- a/src/templates/chatbox_head.html
+++ b/src/templates/chatbox_head.html
@@ -22,6 +22,7 @@
         <a class="chatbox-btn show-user-details-modal fa fa-id-card" title="{{{o.info_details}}}"></a>
     </div> -->
 <!-- </div> -->
+<!-- <div class="chatbox-navback"><i class="fa fa-arrow-left"></i></div> -->
 <div class="top-toolbar">
         <div class="container-fluid">
             <div class="row">
