--- a/src/templates/chatroom.html
+++ b/src/templates/chatroom.html
@@ -1,4 +1,4 @@
-<div class="flyout box-flyout">
+<div class="flyout box-flyout" id="flyout box-flyout">
         
     <div class="chat-head chat-head-chatroom row no-gutters"></div>
     
