left-right-chat

--- a/src/templates/message.html
+++ b/src/templates/message.html
@@ -1,7 +1,19 @@
-<div class="separater">
-    <div class="message chat-msg {{{o.type}}} {[ if (o.is_me_message) { ]} chat-msg--action {[ } ]} {{{o.extra_classes}}}"
+<div class="message chat-msg {{{o.type}}} {[ if (o.is_me_message) { ]} chat-msg--action {[ } ]} {{{o.extra_classes}}} chat-msg-whole__{{{o.sender}}}"
         data-isodate="{{{o.time}}}" data-msgid="{{{o.msgid}}}" data-from="{{{o.from}}}" data-encrypted="{{{o.is_encrypted}}}">
-    {[ if (o.type !== 'headline' && !o.is_me_message) { ]}
+        <div class="dropdown-actions">
+            <ul class="chat-msg-actions hidden">
+                    
+                    {[ if (!o.url) { ]}
+                <li class="chat-msg__action chat-msg__action-edit"><i class="fa fa-pencil-alt"></i>{{{o.__('Edit message')}}}</li>
+                {[ } ]}
+                <li class="chat-msg__action chat-msg__action-delete"><i class="fa fa-flag"></i>{{{o.__('Delete message')}}}</li>
+                <li class="chat-msg__action cancel-chat-msg-actions"><i class="fa fa-times"></i>{{{o.__('Cancel')}}}</li>
+            
+            </ul>
+            <button class="toggle-chat-msg-actions">...</i></button>
+        </div>
+        <div class="style-box">
+        {[ if (o.type !== 'headline' && !o.is_me_message) { ]}
         <canvas class="avatar chat-msg__avatar" height="36" width="36"></canvas>
         {[ } ]}
         <div class="chat-msg__content {[ if (o.is_me_message) { ]}chat-msg__content--action{[ } ]}">
@@ -41,21 +53,11 @@
                     <button class="chat-msg__action chat-msg__action-edit fa fa-pencil-alt" title="{{{o.__('Edit this message')}}}"></button>
                     <button class="chat-msg__action chat-msg__action-delete fa fa-flag" title="{{{o.__('Delete this message')}}}"></button>
                 </div> -->
-                <div class="dropdown-actions">
-                <ul class="chat-msg-actions hidden">
-                        
-                        {[ if (!o.url) { ]}
-                    <li class="chat-msg__action chat-msg__action-edit"><i class="fa fa-pencil-alt"></i>{{{o.__('Edit message')}}}</li>
-                    {[ } ]}
-                    <li class="chat-msg__action chat-msg__action-delete"><i class="fa fa-flag"></i>{{{o.__('Delete message')}}}</li>
-                    <li class="chat-msg__action cancel-chat-msg-actions"><i class="fa fa-times"></i>{{{o.__('Cancel')}}}</li>
                 
-                </ul>
-                <button class="toggle-chat-msg-actions">...</i></button>
-                </div>
                 {[ } ]}
 
             {[ if (!o.is_me_message) { ]}</div>{[ } ]}
         </div>
     </div>
+    
 </div>
