--- a/src/templates/roster_item.html
+++ b/src/templates/roster_item.html
@@ -1,5 +1,5 @@
 <img class="roster-avatar avatar direct-message-avatart" src="{{{o.dataUri}}}">
-<a class="list-item-link cbox-list-item open-chat w-100 {[ if (o.num_unread) { ]} unread-msgs {[ } ]}"
+<a class="list-item-link cbox-list-item open-chat w-100 {[ if (o.num_unread) { ]} unread-msgs {[ } ]}" data-jid={{{o.jid}}}
    title="{{{o.desc_chat}}}" href="#">
     <span class="{{{o.status_icon}}}" title="{{{o.desc_status}}}"></span>
     {[ if (o.num_unread) { ]}
