--- a/src/templates/roster_item.html
+++ b/src/templates/roster_item.html
@@ -7,5 +7,5 @@
     {[ } ]}
     <span class="contact-name {[ if (o.num_unread) { ]} unread-msgs {[ } ]}">{{{o.display_name}}}</span></a>
 {[ if (o.allow_contact_removal) { ]}
-<a class="list-item-action remove-xmpp-contact far fa-trash-alt" title="{{{o.desc_remove}}}" href="#"></a>
+<!-- <a class="list-item-action remove-xmpp-contact far fa-trash-alt" title="{{{o.desc_remove}}}" href="#"></a> -->
 {[ } ]}
