--- a/src/templates/profile_view.html
+++ b/src/templates/profile_view.html
@@ -21,7 +21,7 @@
     <div class="media-body dropdown">
         <a href="#" data-toggle="dropdown" class="profile-menu media-title dropdown-toggle font-weight-semibold" aria-expanded="false">{{{o.fullname}}}</a>
         <ul class="dropdown-menu animate slideIn">
-            <li><a href="#" class="dropdown-item show-profile">Profile &amp; Account</a></li>
+            <!-- <li><a href="#" class="dropdown-item show-profile">Profile &amp; Account</a></li> -->
             <!-- <a href="javascript:void(0);" class="dropdown-item">Preferences</a> -->
             <!-- <a href="javascript:void(0);" class="dropdown-item">Help &amp; feedback</a> -->
             <li><a href="#" class="dropdown-item controlbox-heading__btn change-status" title="{{{o.title_change_status}}}" data-toggle="modal" data-target="#changeStatusModal">Change Status</a></li>
