--- a/src/templates/chatbox_head.html
+++ b/src/templates/chatbox_head.html
@@ -89,7 +89,8 @@
                                 </div>
                         </div>
                         <div class="col">
-                            {{{o.role}}}
+                                {[ if (o.role !== '') { ]} | {{{o.role}}} {[ } ]}
+                            
                         </div>
                     </div>
                 </div>
