--- a/src/templates/chatbox_head.html
+++ b/src/templates/chatbox_head.html
@@ -84,7 +84,7 @@
                     </ul>
                     <div class="chatbox-buttons">
                         <a class="chatbox-btn show-user-details-modal fa fa-id-card" title="{{{o.info_details}}}"></a>
-                        <a class="chatbox-btn close-chatbox-button fa fa-times" title="{{{o.info_close}}}"></a>
+                        <!-- <a class="chatbox-btn close-chatbox-button fa fa-times" title="{{{o.info_close}}}"></a> -->
                     </div>
                 </div>
             </div>
