--- a/src/templates/spoiler_button.html
+++ b/src/templates/spoiler_button.html
@@ -1,3 +1,3 @@
 <li class="toggle-compose-spoiler fa {[ if (o.composing_spoiler)  { ]} fa-eye-slash {[ } ]} {[ if (!o.composing_spoiler)  { ]} fa-eye {[ } ]}"
-    title="Hidden Message">
+    title="{{ o.label_toggle_spoiler }}">
 </li>
